--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: '^1.14' # The Go version to download (if necessary) and use.
+          go-version: '^1.14'
     - run: go version
     - name: Generate docgo
       run: make godoc
